--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -6,3 +6,7 @@ KERNEL_ARCH_LIBS=
 KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/tty.o \
+$(ARCHDIR)/dt_flush.o \
+$(ARCHDIR)/dt.o \
+$(ARCHDIR)/interrupts.o \
+$(ARCHDIR)/isr.o \
